--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,14 @@
-<p>dashboard works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col lg-6 mt-3">
+            <input [(ngModel)]="ciudad" type="text" class="form-control mt-3" placeholder="Ingresar ciudad">
+            <br>
+            <button (click)="mClima()" class="btn btn-primary mb-3">Aceptar</button>
+            
+            <div class="card-header"><h3>CLIMA ACTUAL</h3></div>
+            <div class="card body">
+                <p class="card-text"><b> Temperatura: {{temperatura}}°C</b></p>                
+            </div>
+        </div>
+    </div>
+</div>
